caternet/CatNodeJS/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: CatNodeJS-${CI_COMMIT_REF_NAME}
  namespace: apps
spec:
  selector:
    app: CatNodeJS-${CI_COMMIT_REF_NAME}
  ports:
  - protocol: "TCP"
    port: 1337
    targetPort: catnodejs
    name: catnodejs
  type: NodePort

  ---
apiVersion: v1
kind: Service
metadata:
  name: CatNodeJS-${CI_COMMIT_REF_NAME}-dashboard
  namespace: apps
spec:
  selector:
    app: CatNodeJS-${CI_COMMIT_REF_NAME}
  ports:
  - protocol: "TCP"
    port: 1338
    targetPort: dashboard
    name: dashboard
  type: NodePort
