caternet/CatNodeJS/deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: catnodejs-${CI_COMMIT_REF_NAME}-miaou-net-ingress
  namespace: apps
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 512m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "500"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "500"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "500" 
    nginx.org/websocket-services: "CatNodeJS-${CI_COMMIT_REF_NAME}"
spec:
  tls:
  - hosts:
    - catnodejs-${CI_COMMIT_REF_NAME}.miaou.net
    secretName: catnodejs-${CI_COMMIT_REF_NAME}-miaou-net-tls
  rules:
  - host: catnodejs-${CI_COMMIT_REF_NAME}.miaou.net
    http:
      paths:
      - path: /
        backend:
          serviceName: CatNodeJS-${CI_COMMIT_REF_NAME}
          servicePort: 1337
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: backend-dashboard-catnodejs-${CI_COMMIT_REF_NAME}-miaou-lan-ingress
  namespace: apps
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 512m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "500"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "500"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "500" 
    nginx.org/websocket-services: "CatNodeJS-${CI_COMMIT_REF_NAME}"
spec:
  tls:
  - hosts:
    - backend-dashboard-catnodejs-${CI_COMMIT_REF_NAME}.miaou.lan
    secretName: backend-dashboard-catnodejs-${CI_COMMIT_REF_NAME}-miaou-lan-tls
  rules:
  - host: backend-dashboard-catnodejs-${CI_COMMIT_REF_NAME}.miaou.lan
    http:
      paths:
      - path: /
        backend:
          serviceName: CatNodeJS-${CI_COMMIT_REF_NAME}
          servicePort: 1338
